--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ color:white;
 .grid
 {
 display: grid;
-grid-template-columns: auto auto auto;
+grid-template-columns: auto auto auto auto;
 grid-template-rows: auto auto;
 }
 
