--- a/indexMain.css
+++ b/indexMain.css
@@ -1,7 +1,7 @@
 
 .grid
 {
-background-color:whitesmoke;
+background-color:#9FD6FF;
 display: grid;
 grid-template-columns: auto auto auto ;
 grid-template-rows: auto ;
